// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`parse formula test ADD(1, ADD(2, {{ field1 }})) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "arguments": [
            {
              "arguments": [
                {
                  "type": "number",
                  "value": 2,
                },
                {
                  "type": "variable",
                  "value": "{{field1}}",
                  "variable": "field1",
                },
              ],
              "type": "argumentList",
            },
          ],
          "name": "ADD",
          "returnType": 0,
          "type": "functionCall",
          "value": "ADD(2,{{field1}})",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ADD",
  "returnType": 0,
  "type": "functionCall",
  "value": "ADD(1,ADD(2,{{field1}}))",
}
`;

exports[`parse formula test ADD(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ADD",
  "returnType": 0,
  "type": "functionCall",
  "value": "ADD(1,2)",
}
`;

exports[`parse formula test 1 1`] = `
{
  "type": "number",
  "value": 1,
}
`;

exports[`parse formula test {{field1}} 1`] = `
{
  "type": "variable",
  "value": "{{field1}}",
  "variable": "field1",
}
`;

exports[`parse formula test 1 + 1 1`] = `
{
  "arguments": [
    {
      "type": "number",
      "value": 1,
    },
    {
      "type": "number",
      "value": 1,
    },
  ],
  "name": "+",
  "returnType": 0,
  "type": "functionCall",
  "value": "1+1",
}
`;

exports[`parse formula test {{field1}} + {{field2}} 1`] = `
{
  "arguments": [
    {
      "type": "variable",
      "value": "{{field1}}",
      "variable": "field1",
    },
    {
      "type": "variable",
      "value": "{{field2}}",
      "variable": "field2",
    },
  ],
  "name": "+",
  "returnType": 0,
  "type": "functionCall",
  "value": "{{field1}}+{{field2}}",
}
`;

exports[`parse formula test SUM({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "SUM",
  "returnType": 0,
  "type": "functionCall",
  "value": "SUM({{field1}},{{field2}})",
}
`;

exports[`parse formula test CONCAT({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CONCAT",
  "returnType": 1,
  "type": "functionCall",
  "value": "CONCAT({{field1}},{{field2}})",
}
`;

exports[`parse formula test CONCAT({{field1}}, {{field2}}, {{field3}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
        {
          "type": "variable",
          "value": "{{field3}}",
          "variable": "field3",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CONCAT",
  "returnType": 1,
  "type": "functionCall",
  "value": "CONCAT({{field1}},{{field2}},{{field3}})",
}
`;

exports[`parse formula test SUBTRACT(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "SUBTRACT",
  "returnType": 0,
  "type": "functionCall",
  "value": "SUBTRACT(1,2)",
}
`;

exports[`parse formula test MULTIPLY(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MULTIPLY",
  "returnType": 0,
  "type": "functionCall",
  "value": "MULTIPLY(1,2)",
}
`;

exports[`parse formula test DIVIDE(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "DIVIDE",
  "returnType": 0,
  "type": "functionCall",
  "value": "DIVIDE(1,2)",
}
`;

exports[`parse formula test 1 - 1 1`] = `
{
  "arguments": [
    {
      "type": "number",
      "value": 1,
    },
    {
      "type": "number",
      "value": 1,
    },
  ],
  "name": "-",
  "returnType": 0,
  "type": "functionCall",
  "value": "1-1",
}
`;

exports[`parse formula test 1 * 1 1`] = `
{
  "arguments": [
    {
      "type": "number",
      "value": 1,
    },
    {
      "type": "number",
      "value": 1,
    },
  ],
  "name": "*",
  "returnType": 0,
  "type": "functionCall",
  "value": "1*1",
}
`;

exports[`parse formula test 1 / 1 1`] = `
{
  "arguments": [
    {
      "type": "number",
      "value": 1,
    },
    {
      "type": "number",
      "value": 1,
    },
  ],
  "name": "/",
  "returnType": 0,
  "type": "functionCall",
  "value": "1/1",
}
`;

exports[`parse formula test SUBTRACT(1, 2) + MULTIPLY(3, 4) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "arguments": [
            {
              "type": "number",
              "value": 1,
            },
            {
              "type": "number",
              "value": 2,
            },
          ],
          "type": "argumentList",
        },
      ],
      "name": "SUBTRACT",
      "returnType": 0,
      "type": "functionCall",
      "value": "SUBTRACT(1,2)",
    },
    {
      "arguments": [
        {
          "arguments": [
            {
              "type": "number",
              "value": 3,
            },
            {
              "type": "number",
              "value": 4,
            },
          ],
          "type": "argumentList",
        },
      ],
      "name": "MULTIPLY",
      "returnType": 0,
      "type": "functionCall",
      "value": "MULTIPLY(3,4)",
    },
  ],
  "name": "+",
  "returnType": 0,
  "type": "functionCall",
  "value": "SUBTRACT(1,2)+MULTIPLY(3,4)",
}
`;

exports[`parse formula test MOD(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MOD",
  "returnType": 0,
  "type": "functionCall",
  "value": "MOD(1,2)",
}
`;

exports[`parse formula test POWER(2, 3) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 2,
        },
        {
          "type": "number",
          "value": 3,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "POWER",
  "returnType": 0,
  "type": "functionCall",
  "value": "POWER(2,3)",
}
`;

exports[`parse formula test SQRT(4) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 4,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "SQRT",
  "returnType": 0,
  "type": "functionCall",
  "value": "SQRT(4)",
}
`;

exports[`parse formula test ABS(-5) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 5,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ABS",
  "returnType": 0,
  "type": "functionCall",
  "value": "ABS(-5)",
}
`;

exports[`parse formula test ROUND(1.234, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ROUND",
  "returnType": 0,
  "type": "functionCall",
  "value": "ROUND(1.234,2)",
}
`;

exports[`parse formula test FLOOR(1.234, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "FLOOR",
  "returnType": 0,
  "type": "functionCall",
  "value": "FLOOR(1.234,2)",
}
`;

exports[`parse formula test CEILING(1.234, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CEILING",
  "returnType": 0,
  "type": "functionCall",
  "value": "CEILING(1.234,2)",
}
`;

exports[`parse formula test MIN(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MIN",
  "returnType": 0,
  "type": "functionCall",
  "value": "MIN(1,2)",
}
`;

exports[`parse formula test MAX(1, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MAX",
  "returnType": 0,
  "type": "functionCall",
  "value": "MAX(1,2)",
}
`;

exports[`parse formula test AVERAGE(1, 2, 3) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1,
        },
        {
          "type": "number",
          "value": 2,
        },
        {
          "type": "number",
          "value": 3,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "AVERAGE",
  "returnType": 0,
  "type": "functionCall",
  "value": "AVERAGE(1,2,3)",
}
`;

exports[`parse formula test MOD({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MOD",
  "returnType": 0,
  "type": "functionCall",
  "value": "MOD({{field1}},{{field2}})",
}
`;

exports[`parse formula test POWER({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "POWER",
  "returnType": 0,
  "type": "functionCall",
  "value": "POWER({{field1}},{{field2}})",
}
`;

exports[`parse formula test SQRT({{field1}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "SQRT",
  "returnType": 0,
  "type": "functionCall",
  "value": "SQRT({{field1}})",
}
`;

exports[`parse formula test ABS({{field1}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ABS",
  "returnType": 0,
  "type": "functionCall",
  "value": "ABS({{field1}})",
}
`;

exports[`parse formula test ROUND({{field1}}, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ROUND",
  "returnType": 0,
  "type": "functionCall",
  "value": "ROUND({{field1}},2)",
}
`;

exports[`parse formula test FLOOR({{field1}}, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "FLOOR",
  "returnType": 0,
  "type": "functionCall",
  "value": "FLOOR({{field1}},2)",
}
`;

exports[`parse formula test CEILING({{field1}}, 2) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "number",
          "value": 2,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CEILING",
  "returnType": 0,
  "type": "functionCall",
  "value": "CEILING({{field1}},2)",
}
`;

exports[`parse formula test MIN({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MIN",
  "returnType": 0,
  "type": "functionCall",
  "value": "MIN({{field1}},{{field2}})",
}
`;

exports[`parse formula test MIN({{field1}}, {{field2}}, {{field3}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
        {
          "type": "variable",
          "value": "{{field3}}",
          "variable": "field3",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MIN",
  "returnType": 0,
  "type": "functionCall",
  "value": "MIN({{field1}},{{field2}},{{field3}})",
}
`;

exports[`parse formula test MAX({{field1}}, {{field2}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MAX",
  "returnType": 0,
  "type": "functionCall",
  "value": "MAX({{field1}},{{field2}})",
}
`;

exports[`parse formula test MAX({{field1}}, {{field2}}, {{field3}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
        {
          "type": "variable",
          "value": "{{field3}}",
          "variable": "field3",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "MAX",
  "returnType": 0,
  "type": "functionCall",
  "value": "MAX({{field1}},{{field2}},{{field3}})",
}
`;

exports[`parse formula test AVERAGE({{field1}}, {{field2}}, {{field3}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
        {
          "type": "variable",
          "value": "{{field2}}",
          "variable": "field2",
        },
        {
          "type": "variable",
          "value": "{{field3}}",
          "variable": "field3",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "AVERAGE",
  "returnType": 0,
  "type": "functionCall",
  "value": "AVERAGE({{field1}},{{field2}},{{field3}})",
}
`;

exports[`parse formula test ROUND(1.234) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ROUND",
  "returnType": 0,
  "type": "functionCall",
  "value": "ROUND(1.234)",
}
`;

exports[`parse formula test ROUND({{field1}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "ROUND",
  "returnType": 0,
  "type": "functionCall",
  "value": "ROUND({{field1}})",
}
`;

exports[`parse formula test FLOOR(1.234) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "FLOOR",
  "returnType": 0,
  "type": "functionCall",
  "value": "FLOOR(1.234)",
}
`;

exports[`parse formula test FLOOR({{field1}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "FLOOR",
  "returnType": 0,
  "type": "functionCall",
  "value": "FLOOR({{field1}})",
}
`;

exports[`parse formula test CEILING(1.234) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "number",
          "value": 1.234,
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CEILING",
  "returnType": 0,
  "type": "functionCall",
  "value": "CEILING(1.234)",
}
`;

exports[`parse formula test CEILING({{field1}}) 1`] = `
{
  "arguments": [
    {
      "arguments": [
        {
          "type": "variable",
          "value": "{{field1}}",
          "variable": "field1",
        },
      ],
      "type": "argumentList",
    },
  ],
  "name": "CEILING",
  "returnType": 0,
  "type": "functionCall",
  "value": "CEILING({{field1}})",
}
`;
